--- a/ui/Templates/user.template.phtml
+++ b/ui/Templates/user.template.phtml
@@ -18,11 +18,30 @@
     <!-- Bootstrap core -->
     <link href="assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-
-    <link href="assets/css/styles.css" rel="stylesheet">
   </head>
 
   <body>
+
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">YouSick</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="?home">Home</a></li>
+            <li><a href="?aboutus">About</a></li>
+            <li><a href="?contactus">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
     <div class="container">
         <br>
