Worked on CSV parser

--- a/ui/Views/home.phtml
+++ b/ui/Views/home.phtml
@@ -1,10 +1,11 @@
-<div class="jumbotron">
+<div class="jumbotron" style="background-color: white; text-align: center;">
     <h1>YouSick</h1>
     <h4>A simple and lightweight sick-leave notification system</h4>
 </div>
 <div class="row">
     <div align="center">
         <h2>Enter your username to start</h2>
+        <br>
         <div class="col-lg-4" style="float:none">
             <form name="UsernameForm" method="post">
                 <span class="input-group">
