--- a/ui/Templates/default.template.phtml
+++ b/ui/Templates/default.template.phtml
@@ -20,6 +20,8 @@
     <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 
     <link href="assets/css/styles.css" rel="stylesheet">
+	
+	<link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
   </head>
 
   <body>
