--- a/ui/Views/admin_add.phtml
+++ b/ui/Views/admin_add.phtml
@@ -2,10 +2,10 @@
     <h1>YouSick</h1>
     <h4>A simple and lightweight sick-leave notification system</h4>
 </div>
-<div class="col-md-4 col-centered">
+<div class="col-md-4 col-sm-6 col-xs-9 col-centered">
     <div id="user-header" class="row">
         <div id="name-wrapper">
-            <h2>Name</h2>
+            <h2>File Sick Leave</h2>
         </div>
         <!--
         <div id="sl-count-wrapper" class="col-md-3">
@@ -18,6 +18,19 @@
     </div>
     <div class="vertical-space"></div>
     <form class="row form-horizontal" name="sickleave-form" method="post">
+        <div class="form-group">
+            <label for="employee-name-field" class="control-label col-md-3">Who</label>
+            <div class="col-md-9">
+                <input type="text" id="employee-name-field" class="form-control" name="employee-name"/>
+            </div>
+            <div class="col-md-3"></div>
+            <div class="col-md-9">
+                <label><strong>0/15</strong> Sick Leave Filed</label>
+                <span class="span-right">
+                    <a href="">See history</a>
+                </span>
+            </div>
+        </div>
         <div class="form-group">
             <label for="datetimepicker" class="control-label col-md-3">Date</label>
             <div class="col-md-9">
@@ -62,7 +75,8 @@
 <script type="text/javascript">
     $(function () {
         $('#datetimepicker').datetimepicker({
-            format: 'LL'
+            format: 'LL',
+            defaultDate: new Date()
         });
     });
 </script>
