--- a/assets/3rd/js/home2.phtml
+++ b/assets/3rd/js/home2.phtml
@@ -1,15 +1,11 @@
-<div class="jumbotron" style="background-color: white; text-align: center; margin: auto 0;">
-    <h1>YouSick</h1>
-    <h4>A simple and lightweight sick-leave notification system</h4>
-</div>
-<div id="change" class="row-fluid">
+<div class="row-fluid">
     <div align="center">
-        <h2>Enter your username to start</h2>
+        <h2>Enter your Password to start</h2>
         <br>
         <div class="col-lg-4" style="float:none">
-            <form id="startForm" name="UsernameForm" method="post">
+            <form name="UsernameForm" method="post">
                 <span class="input-group">
-                    <input id="username" type="text" class="form-control textbox-large" name="username" maxlength="15">
+                    <input type="text" class="form-control textbox-large" name="username" maxlength="15">
                     <span class="input-group-btn">
                         <input type="submit" id="START" class="btn btn-danger large" value="Start">
                     </span>
