--- a/ui/Templates/default.template.phtml
+++ b/ui/Templates/default.template.phtml
@@ -22,6 +22,7 @@
     <link href="assets/css/styles.css" rel="stylesheet">
 	
 	<link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
+    <script src="assets/3rd/js/function.js" type="text/javascript"></script>
   </head>
 
   <body>
