Added admin dashboard UI. Still needs some fixing on layout and design.

--- a/ui/Templates/admin.template.phtml
+++ b/ui/Templates/admin.template.phtml
@@ -24,9 +24,9 @@
 	<link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
   </head>
 
-  <body class="admin-dashboard">
+  <body>
 
-    <div class="container">
+    <div class="container-full">
         <?php echo $_VIEW; ?>
 
     </div><!-- /.container -->
