--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,30 +1,31 @@
+html.admin-dashboard, body.admin-dashboard, .container.admin-dashboard,
+col-md-9.admin-dashboard, col-md-3.admin-dashboard
+{
+	height: 100%;
+}
 
 body
 {
 
 }
 
-.col-centered
+div.col-lg-4 span.input-group span.input-group-btn div
 {
-    float: none;
-    margin: 0 auto;
+	display:none;
+
 }
 
 div.header
 {
-
+    background-color: #383838;
+    border-bottom: #cd172d solid 2px;
+    height: 50px;
 }
 
 div.footer
 {
     background-color: darkkhaki;
     color: #fff;
-}
-
-.textbox-large
-{
-    font-size: 35px;
-    height: 50px;
 }
 
 input[type="submit"].large
@@ -34,13 +35,40 @@ input[type="submit"].large
     background-attachment:#fff;
 }
 
-#sl-count-wrapper
+.col-centered
 {
-    background-color: #cd172d;
+    float: none;
+    margin: 0 auto;
 }
 
-#user-header
+.container-full
 {
+    margin: 0 auto;
+    width: 100%;
+}
+
+.logo
+{
+	color: #ffffff;
+	font-size: 1.8em;
+	margin: 10px 0;
+	font-weight: bold;
+}
+
+.no-gutter
+{
+    padding-right: 0;
+}
+
+.textbox-large
+{
+    font-size: 35px;
+    height: 50px;
+}
+
+.reports-nav-items
+{
+    text-align: left;
 }
 
 .span-right
@@ -53,8 +81,33 @@ input[type="submit"].large
     height: 30px;
 }
 
-div.col-lg-4 span.input-group span.input-group-btn div
+#admin-user-btn
 {
-	display:none;
+	margin: 9px 15px 9px 9px;
+}
 
+#report-container
+{
+	background-color: #cccccc;
+}
+
+#reports-nav
+{
+	background-color: #383838;
+}
+
+#reports-nav > .list-group-item
+{
+    border-radius: 0 !important;
+	text-align: left;
+	width: 100%;
+}
+
+#sl-count-wrapper
+{
+    background-color: #cd172d;
+}
+
+#user-header
+{
 }
