--- a/ui/Views/home.phtml
+++ b/ui/Views/home.phtml
@@ -21,3 +21,14 @@
         </div>
     </div>
 </div>
+<div class="remodal-bg">
+  <div id="qunit"></div>
+  <a href="#" data-remodal-target="modal">Call</a>
+</div>
+
+<div class="remodal" data-remodal-id="modal">
+  <a data-remodal-action="close" class="remodal-close"></a>
+
+  <a data-remodal-action="cancel" class="remodal-cancel" href="#">Cancel</a>
+  <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+</div>
