--- a/ui/Views/user.phtml
+++ b/ui/Views/user.phtml
@@ -7,18 +7,10 @@
         <div id="name-wrapper">
             <h2>Name</h2>
             <label><strong>0/15</strong> Sick Leave Filed</label>
-            <span class="span-right">
+            <span class="pull-right">
                 <a href="">See history</a>
             </span>
         </div>
-        <!--
-        <div id="sl-count-wrapper" class="col-md-3">
-            <div class="row">
-                <label>SL</label>
-                <a href="">15/15</a>
-            </div>
-        </div>
-        -->
     </div>
     <div class="vertical-space"></div>
     <form class="row form-horizontal" name="sickleave-form" method="post">
