--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,3 @@
-html.admin-dashboard, body.admin-dashboard, .container.admin-dashboard,
-col-md-9.admin-dashboard, col-md-3.admin-dashboard
-{
-	height: 100%;
-}
-
 body
 {
 
@@ -41,17 +35,23 @@ input[type="submit"].large
     margin: 0 auto;
 }
 
-.container-full
+.col-with-right-separator
 {
-    margin: 0 auto;
-    width: 100%;
+	padding-right: 20px;
+	border-right: 1px solid #cccccc;
+}
+
+.list-group-item.reports-nav-items.active
+{
+	background-color: #cd172d;
+	color: #ffffff;
 }
 
 .logo
 {
 	color: #ffffff;
 	font-size: 1.8em;
-	margin: 10px 0;
+	margin: 10px 0 10px -15px;
 	font-weight: bold;
 }
 
@@ -68,12 +68,19 @@ input[type="submit"].large
 
 .reports-nav-items
 {
-    text-align: left;
+	border: 0;
 }
 
-.span-right
+.reports-nav-items:hover
 {
-    float: right;
+	background-color: #cd172d;
+	color: #ffffff;
+}
+
+.row-bottom-align
+{
+	display: table-cell;
+	vertical-align: bottom;
 }
 
 .vertical-space
@@ -83,17 +90,24 @@ input[type="submit"].large
 
 #admin-user-btn
 {
-	margin: 9px 15px 9px 9px;
+	margin-top: 9px;
 }
 
-#report-container
+#chart-container
 {
-	background-color: #cccccc;
+	width: 100%;
+}
+
+#reports-header
+{
+	font-weight: bold;
+	color: #383838;
+	margin-top: 25px;
 }
 
 #reports-nav
 {
-	background-color: #383838;
+	background-color: transparent;
 }
 
 #reports-nav > .list-group-item
