--- a/ui/Templates/admin_form.template.phtml
+++ b/ui/Templates/admin_form.template.phtml
@@ -13,20 +13,24 @@
     <title>YouSick</title>
 
     <link href="assets/3rd/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+    <link rel="stylesheet" type="text/css" href="/bower_components/selectize/dist/css/selectize.bootstrap3.css" />
     <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
     <link href="assets/css/styles.css" rel="stylesheet">
 
     <script src="assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
     <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/bower_components/highcharts/highcharts.js"></script>
+    <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="/bower_components/selectize/dist/js/standalone/selectize.min.js"></script>
 </head>
 
 <body>
 
-    <div class="container-fluid">
-        <?php echo $_VIEW; ?>
+<div class="container">
+    <?php echo $_VIEW; ?>
 
-    </div><!-- /.container -->
+</div><!-- /.container -->
 
 
 </html>
