--- a/ui/Views/home.phtml
+++ b/ui/Views/home.phtml
@@ -33,3 +33,35 @@
   <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
 </div>
 </script>
+
+
+
+
+
+<script type="text/javascript">
+	$(document).ready(function(){
+		var username;
+		$("#startForm").submit(function (e) {
+			username = $("#username").val();
+			e.preventDefault();
+			$("#spinner").show();
+			$.ajax({
+				data: $('#startForm').serialize(),
+				type: "POST",
+				url: "<?= BASE_URL ?>rest/check_username",
+				contentType: 'json',
+				success: function (response) {
+					if(response.success){
+							$("#change").html('');
+						console.log(response.data);
+						// for (var i=0; i < response.data.length; i++)
+						// {
+							// var row = response.data[i];
+							// $('#change').append(row.employee + ', ' + row.age + ', ' + row.company + '<br>');
+						// }
+					}
+				},
+			});
+		});
+	});
+</script>
