--- a/ui/Views/admin_add.phtml
+++ b/ui/Views/admin_add.phtml
@@ -24,11 +24,11 @@
         </div>
     </div>
     <div class="vertical-space"></div>
-    <form class="row form-horizontal" id="sl-form" name="sl-form" method="post">
+    <form class="row form-horizontal" name="sickleave-form" method="post">
         <div class="form-group">
             <label for="employee-name-field" class="control-label col-md-3">Who</label>
             <div class="col-md-9 control-group">
-                <select id="employee-name-field" class="form-control" name="for_id" placeholder="Select employee">
+                <select id="employee-name-field" class="form-control" placeholder="Select employee">
                     <option value="">Select a person...</option>
                 </select>
             </div>
@@ -44,7 +44,7 @@
             <label for="datetimepicker" class="control-label col-md-3">Date</label>
             <div class="col-md-9">
                 <div class="input-group date" id="datetimepicker">
-                    <input type="text" class="form-control" name="date"/>
+                    <input type="text" class="form-control"/>
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
@@ -54,13 +54,13 @@
             <div class="col-md-9">
                 <div class="col-md-6">
                     <label class="radio-inline">
-                        <input type="radio" name="span" id="whole-day-radion-btn" value="1" checked>
+                        <input type="radio" name="optionsRadios" id="whole-day-radion-btn" value="1" checked>
                         Whole day
                     </label>
                 </div>
                 <div class="col-md-6">
                     <label class="radio-inline">
-                        <input type="radio" name="span" id="half-day-radion-btn" value="0.5">
+                        <input type="radio" name="optionsRadios" id="half-day-radion-btn" value="0.5">
                         Half day
                     </label>
                 </div>
@@ -118,11 +118,7 @@
         });
 
         $('#file-sl-btn').click(function() {
-            var admin_id = 0;
-            var data = $('#sl-form').serializeArray();
-            //var data.date = moment(data.date, "YYYY-MM-DD");
-            data.push({ author_id : admin_id });
-            alert(data);
+            console.log(selectizeControl.getValue());
         });
 
         $('.logo').click(function() {
