--- a/ui/Views/upload.phtml
+++ b/ui/Views/upload.phtml
@@ -16,14 +16,22 @@ function uploadfile(){
 	ajax.send(formdata);
 }
 function progressHandler(event){
-	Element("totalLoad").innerHTML = "Uploaded" + event.loaded + " bytes of " + event.total;
-	var percent = (event.loaded / event.total) * 100;
-	Element("prog").value = Math.round(percent);
-	Element("status").innerHTML = Math.round(percent) + "% uploaded... please wait";
+	//Element("totalLoad").innerHTML = "Uploaded" + event.loaded + " bytes of " + event.total;
+	//var percent = (event.loaded / event.total) * 100;
+	//Element("prog").value = Math.round(percent);
+	//Element("status").innerHTML = Math.round(percent) + "% uploaded... please wait";
 }
 function completeHandler(event){
-	Element("status").innerHTML = event.target.responseText;
-	Element("prog").value = 0;
+	//Element("status").innerHTML = event.target.responseText;
+	var out = '<br><b>The following name(s) is/are added:</b> <br><br>';
+	var jsonArr = JSON.parse(event.target.responseText)
+	console.log(jsonArr);
+	for (var i=0; i < jsonArr.data.collection.length; i++)
+		{
+			var row = jsonArr.data.collection[i];
+			out += row.name + '<br>';
+		}
+	Element("status").innerHTML = out;
 }
 function errorHandler(event){
 	Element("status").innerHTML = "Upload Failed";
@@ -47,7 +55,7 @@ function abortHandler(event){
 				<div id="spinnerUpload" class="whirly-loader">
 					Loading…	
 				</div><br>
-				<h3 id="status"></h3>
+				<p id="status"></p>
 				<p id="totalLoaded"></p>
 			</form>
         </div>
