--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,6 +38,13 @@ div.col-lg-4 div#spinnerUpload
     right: -50px;
     top: 20px;
 }
+div.remodal span.input-group div
+{
+	display:none;
+    position: absolute;
+    right: -50px;
+    top: 20px;
+}
 
 div.footer
 {
