user + sick leave

--- a/ui/Views/home.phtml
+++ b/ui/Views/home.phtml
@@ -102,7 +102,8 @@
 					}
 				},	
 			});
-		});$("#login").submit(function (e) {
+		});
+		$("#login").submit(function (e) {
 			
 			username = $("#username").val();
 			e.preventDefault();
