Integrated session from backend in admin frontend.

--- a/ui/Templates/admin.template.phtml
+++ b/ui/Templates/admin.template.phtml
@@ -19,6 +19,20 @@
     <script src="assets/3rd/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="/bower_components/highcharts/highcharts.js"></script>
+
+    <script type="text/javascript">
+        $.ajax({
+            dataType: 'json',
+            url: '/rest/get_session',
+            success: function(session) {
+                if (!session.success)
+                {
+                    location.href = '/home';
+                }
+            },
+            async: false
+        });
+    </script>
 </head>
 
 <body>
