--- a/ui/Templates/admin_form.template.phtml
+++ b/ui/Templates/admin_form.template.phtml
@@ -23,6 +23,20 @@
     <script src="assets/3rd/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <script type="text/javascript" src="/bower_components/selectize/dist/js/standalone/selectize.min.js"></script>
+
+    <script type="text/javascript">
+        $.ajax({
+            dataType: 'json',
+            url: '/rest/get_session',
+            success: function(session) {
+                if (!session.success)
+                {
+                    location.href = '/home';
+                }
+            },
+            async: false
+        });
+    </script>
 </head>
 
 <body>
