--- a/ui/Views/admin.phtml
+++ b/ui/Views/admin.phtml
@@ -5,7 +5,6 @@
     <span class="col-xs-6">
         <div class="btn-group pull-right">
             <button  type="button" id="admin-user-btn" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                aduser <span class="caret"></span>
             </button>
             <ul class="dropdown-menu pull-right">
                 <li><a href="/admin-add" id="file-sl">File Sick Leave</a></li>
@@ -34,30 +33,31 @@
     </div>
 </div>
 
+<script src="assets/3rd/js/admin.js" type="text/javascript">
+</script>
+
 <script type="text/javascript">
-    $(function () {
-        $('#chart-container').highcharts({
-            chart: {
-                type: 'bar'
-            },
+    $('#chart-container').highcharts({
+        chart: {
+            type: 'bar'
+        },
+        title: {
+            text: 'Fruit Consumption'
+        },
+        xAxis: {
+            categories: ['Apples', 'Bananas', 'Oranges']
+        },
+        yAxis: {
             title: {
-                text: 'Fruit Consumption'
-            },
-            xAxis: {
-                categories: ['Apples', 'Bananas', 'Oranges']
-            },
-            yAxis: {
-                title: {
-                    text: 'Fruit eaten'
-                }
-            },
-            series: [{
-                name: 'Jane',
-                data: [1, 0, 4]
-            }, {
-                name: 'John',
-                data: [5, 7, 3]
-            }]
-        });
+                text: 'Fruit eaten'
+            }
+        },
+        series: [{
+            name: 'Jane',
+            data: [1, 0, 4]
+        }, {
+            name: 'John',
+            data: [5, 7, 3]
+        }]
     });
 </script>
